--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "enchant-1.6.0.tar.gz": 321f9cf0abfa1937401676ce60976d8779c39536
+  enchant-1-6-1.tar.gz: 72903df37fb6a7713d7a3e75f7472dd8b068dadf
